tests/testdata/positive/arithmetic.go
package main
func main() {
  fmt.Println(2 + 3 * 4);
  fmt.Println((2 + 3) * 4);
  fmt.Println(10 % 3);
  fmt.Println(1.5 * 2.0);
  fmt.Println(-5 + 2);
}
