tests/testdata/negative/wrong_arg_type.go
package main
func double(x int) int {
  return x * 2;
}
func main() {
  fmt.Println(double(true));
}
